# stock-prediction

./: .dockerignore  .gitignore  docker-compose.yml
backend/: Dockerfile  package-lock.json  package.json
ml-stock/: Dockerfile  README.md  pyproject.toml
ml-stock/app/: main.py
ml-stock/app/data/: preprocessor.py
ml-stock/app/models/: linear_regression.py  lstm_model.py
